--- a/src/components/Page/Page.module.css
+++ b/src/components/Page/Page.module.css
@@ -1,6 +1,7 @@
 .page {
   display: grid;
   grid-template-rows: auto 1fr auto;
+  grid-template-columns: minmax(0, 1fr);
   width: 100%;
   height: 100%;
   max-width: 60ch;
